--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,8 @@ services:
     image: wordpress:latest
     restart: always
     volumes:
-      - /home/sd/Projekte/refillchallenge/www/wp-content:/var/www/html/wp-content
+      - app:/var/www/html/
+      - ./config/php.conf.ini:/usr/local/etc/php/conf.d/conf.ini
     environment:
       WORDPRESS_DB_HOST: db:3306
       WORDPRESS_DB_USER: wordpress
@@ -45,4 +46,5 @@ networks:
   wp:
 
 volumes:
-  db_data: {}
+  db_data:
+  app:
